apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    jcenter()
}

dependencies {
    compile 'com.google.guava:guava:18.0'
    compile 'org.apache.commons:commons-collections4:4.0'
    testCompile 'junit:junit:4.12'
}
